# Lambda-demo

./: .env.txt  .envcls  .gitignore  .pylintrc  ADMIN_PANEL_STATUS_REPORT.md  ARCHITECTURE_DIAGRAM.md  DOCKER_DEPLOYMENT_GUIDE.md  ENHANCED_PDF_PROCESSING_DEVELOPMENT_PLAN.md  LAMBDA_DEMO_UI_FEATURES.md  LEIER_SCRAPING_ANALYSIS.md  PDF_CONTENT_EXTRACTION_PLAN.md  PDF_PROCESSING_SOLUTION_ANALYSIS.md  README.md  ROCKWOOL_CLIENT_ARCHITECTURE.md  UTF8_CONFIGURATION_GUIDE.md  add_database_constraints.py  analyze_products.py  architecture_diagram.html  chromadb_products_list.csv  chromadb_products_list.json  chromadb_products_list.py  clean_database_duplicates.py  cleanup_databases.py  cleanup_project_files.py  complete_duplicate_solution.py  complete_solution.py  database_analysis.py  debug_agent.py  debug_baumit_catalog.html  debug_connect_args.py  debug_database_utf8.py  debug_env.py  debug_live_database.py  debug_pricelists_20250629_171304.html  debug_pricelists_content.html  debug_termekadatlapok_20250629_164213.html  debug_termekadatlapok_failed.html  debug_utf8_position66.py  deduplication_manager.py  demo_database_integration.py  (+49 more)
src/backend/: .dockerignore  BRIGHTDATA_MCP_SETUP.md  DUPLICATE_CLEANUP_REPORT.md  Dockerfile  INSTALLATION_LOG.md  TROUBLESHOOTING.md  analyze_extraction_strategies.py  check_airrock_hd_fb1.py  check_chromadb.py  check_postgresql_data.py  chromadb_products_complete_list.json  chromadb_products_list.txt  cleanup_test_data.py  complete_extraction_demo_results.json  complete_pdf_extraction.py  complete_products_data_20250701_113522.json  complete_tables_data_20250701_113522.csv  create_products_list.py  debug_ai_analyzer.py  diagnose_strategies.py  diagnose_utf8.py  extract_pdf_data.py  extraction_summary_20250701_113522.csv  fix_metadata_extraction_docker.py  get_all_chroma_products.py  openapi_debug.json  production_pdf_report.json  production_verification_report.py  pyproject.toml  raw_haiku_test_results.json  readable_products_report_20250701_113522.txt  real_pdf_extraction_results.json  real_pdf_processor.py  real_pdf_production.py  real_pdf_results.json  rebuild_chromadb_docker.py  rebuild_chromadb_with_focused_data.py  requirements.txt  requirements_backup.txt  requirements_new.txt  (+15 more)
src/backend/app/: celery_app.py  database.py  demo_integration_real_pdf_mcp.py  demo_mcp_orchestrator.py  duplicate_prevention.py  main.py  paths.py  schemas.py  simple_integration_demo.py  utils.py
src/backend/chromadb_data/: chroma.sqlite3
src/backend/leier_scraping_reports/: leier_api_recursive_report_20250701_232621.json  leier_api_report_20250701_213139.json  leier_api_report_20250701_213214.json  leier_api_report_20250701_213824.json  leier_api_report_20250701_231124.json  (+18 more)
(+641 files in other folders)
